fix: increase z-indec of btns; css: input overflow

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -77,7 +77,7 @@ a {
     size: 16px;
   }
 
-  &::-webkit-input-placeholder {
+  &[placeholder] {
     color: rgba(0, 0, 0, .5);
   }
 
@@ -98,7 +98,8 @@ a {
   font-size: 14px;
   color: white;
 
-  &::-webkit-input-placeholder {
+  &[placeholder] {
+    text-overflow: ellipsis;
     color: white;
   }
 }
@@ -176,10 +177,6 @@ a {
   height: 25px;
 }
 
-.slider>.col-md-12.col-lg-12 {
-  padding: 0;
-}
-
 .slider-btns{
   width: 60vw;
   height: 21px;
@@ -188,6 +185,7 @@ a {
 .slider__btn {
   position: absolute;
   width: 80px;
+  z-index: 100;
   border: none;
   background: transparent;
   font: {
@@ -274,7 +272,7 @@ a {
   position: absolute;
   top: -5vh;
   left: -3vw;
-  z-index: 100;
+  z-index: 50;
   width: 33vw;
   height: 33vh;
 }
